bug: map not showing on restaurant info screen and breadcrumb link is not working.
Style changes to set display to none for both the overlay and toast as it prevents the breadcrumb link from being clicked. Modified nav a to take the height of the icon. Make map showup for restaurant info screen while testing on Google Pixel 2

--- a/src/public/css/restaurant.css
+++ b/src/public/css/restaurant.css
@@ -26,6 +26,8 @@
 #breadcrumb li a {
     color: #1E71A9;
     text-decoration: none;
+    display: inline-block;
+    padding: 0.75em 0;
 }
 
 /* Add a color on mouse-over */
@@ -60,7 +62,7 @@ section {
 #map-container {
     background: blue none repeat scroll 0 0;
     grid-area: map-container;
-    min-height: 100%;
+    min-height: 400px;
     overflow: hidden;
 }
 
@@ -82,6 +84,7 @@ section {
 }
 
 #map {
+    min-height: 400px;
     height: 100%;
 }
 
